--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <footer class="footer">
             <div class="content_footer">
                 <div class="text_info_footer">
-                    <img src="/img/logo.svg" alt="logo">
+                    <img src="img/logo.svg" alt="logo">
                     <p class="text_footer">Powerd by Webflow.<br>All rights reserved Wishbone+Partners, Inc. Licensing</p>
                 </div>
                 <div class="links">
