--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                     <div class="profile">
-                        <img src="img/profile.png" alt="profile" class="profile_img">
+                        <img src="/img/profile.png" alt="profile" class="profile_img">
                         <div class="main_info">
                             <h1 class="full_name">Stephen Collier</h1>
                             <h2 class="dignity">Senior Partner</h2>
